# realtime-stock-prices

./: .gitignore  Dockerfile  README.md  Taskfile.yaml  demo.ipynb  devbox.json  install.sh  pyproject.toml  template.env
.github/workflows/: _base.yml  _deploy_images.yml  _set_env.yml  _terraform.yml  _update_lambda.yml  main.yml
infrastructure/cloudFormation/: oidc-role.yaml  tf-backend.yaml
infrastructure/terraform/: .terraform-docs.yml  README.md  ecr.tf  iam.tf  lambdas.tf  parameter_store.tf  provider.tf  variables.tf
infrastructure/terraform/modules/aws_ecr/: README.md  main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/aws_lambda/: README.md  main.tf  outputs.tf  variables.tf
src/: main.py
src/agents/: stock_agent.py
src/models/: models.py
src/prompts/: stock_market_prompts.py
src/routes/: dummy.py  stock_agent.py
src/services/: agent_runner.py  agent_streaming.py  message_parser.py
src/tools/: tools.py
src/utils/: auth.py  logging_config.py
tests/: test_main.py
tests/agents/: test_agent.py
tests/routes/: test_stock_agent.py
tests/services/: test_agent_streaming.py  test_message_parser.py
