[project]
name = "realtime-stock-prices"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=3.4.3",
    "fastapi>=0.115.12",
    "ipykernel>=6.29.5",
    "langchain-core>=0.3.64",
    "langchain[aws]>=0.3.25",
    "langgraph>=0.4.8",
    "notebook>=7.4.3",
    "python-dotenv>=1.1.0",
    "uvicorn>=0.34.3",
    "yfinance>=0.2.62",
]
