[project]
name = "realtime-stock-prices"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=3.4.3",
    "autopep8>=2.3.2",
    "black>=25.1.0",
    "boto3>=1.38.33",
    "botocore>=1.38.33",
    "fastapi>=0.115.12",
    "ipykernel>=6.29.5",
    "langchain-aws>=0.2.25",
    "langgraph>=0.4.8",
    "langgraph-prebuilt>=0.2.2",
    "notebook>=7.4.3",
    "pylint>=3.3.7",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
    "python-dotenv>=1.1.0",
    "structlog>=25.4.0",
    "uvicorn>=0.34.3",
    "yfinance>=0.2.63",
]
